# Sebastian

./: .env  .gitignore  README.md  cli.py  pyproject.toml
Sebastian/: Dockerfile  README.md  cli.py  docker-compose.yml  models.py  pyproject.toml  test.py
Sebastian/Agents/: Brain_agent.py
Sebastian/Agents/Sub_Agents/: Chat_agent.py  Code_Agent.py  File_agent.py  Git_Agent.py  Program_agent.py  Web_agent.py
Sebastian/Interface/: BubblewrapExecutor.py  SafePath.py  UserInfo.py  sanbox.py
Sebastian/Interface/Capabilities/: Capabilities.py  CapabilityGuard.py  Infer_Capabilities.py
Sebastian/Interface/Docker/: ensure_docker.py
Sebastian/Tools/: DispatcherTool.py  fetch_username.py
Sebastian/Tools/Code_Tools/: Bash.py  execute_code.py  execute_cpp_code.py  execute_in_sanbox.py  execute_in_sandbox.py  execute_javascript_code.py  execute_local.py  execute_powershell_code.py  execute_python.py  execute_python_code.py  execute_shell.py  review_tool.py
Sebastian/Tools/File_Tools/: archive.py  copy_tool.py  create_docx.py  create_file.py  create_file_with_content.py  docx.py  edit.py  extract_document.py  ls_tool.py  mkdir_tool.py  modify_docx.py  mv_tool.py  read_docx.py  read_file.py  rename_file.py  rm_file.py  which_tool.py
Sebastian/UnitTests/: test1.py  test2_sandbox_agent_with_session.py  test3_sandbox_agent_without_session.py  test4_judger.py  test5_SafePath.py
Sebastian/tests/: test1.py  test2_sandbox_agent_with_session.py  test3_sandbox_agent_without_session.py  test4_judger.py  test5_SafePath.py  test6_CodeSessionBuffer.py  test7_RunContextWrapper.py
(+158 files in other folders)
